syntax = "proto3";

package proto;

option go_package=".;proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReplay){}
}

message HelloRequest {
  string name = 1;
}

message HelloReplay {
  string message = 1;
}