syntax = "proto3";

package proto;

option go_package="./proto";

service People {
  rpc SavePerson(SavePersonRequest) returns (SavePersonReplay){}
  rpc SavePersons(SavePersonListRequest) returns (SavePersonListReplay){}

}

message Person {
  int64 id =1;
  string name = 2;
  int64 age = 3;
}

message SavePersonRequest {
   Person person =1;

}

message SavePersonReplay {
  string message =1;
}

message SavePersonListRequest {
  repeated Person peoples =1;
}
message SavePersonListReplay {
  int64 count = 1;
}
